# noise_platform

./: LICENSE  README.md  package-lock.json  package.json
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  files.rs  keyboard_listener.rs  main.rs  settings.rs  sounds.rs
src/components/: DevicesModal.tsx  Navbar.tsx  NoiseSettingsModal.tsx  NoiseTable.tsx
src/css/: active.module.css
src/hooks/: useDebounce.ts
