[package]
name = "noise_platform"
version = "0.1.0"
description = "A Tauri App"
authors = ["Eric Otuvaka"]
license = ""
repository = "REDACTED"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
thiserror = "1.0"
tauri = { version = "1.5", features = [ "shell-open", "window-set-size", "path-all", "dialog-save", "dialog-open", "fs-write-file", "fs-read-dir", "fs-create-dir", "fs-read-file", "fs-exists" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lofty = "0.18.2"
cargo-watch = "8.4.1"
rodio = "0.17.3"
cpal = "0.15.2"
ringbuf = "0.3.3"
rdev = "=0.5.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"     # Strip expensive panic clean-up logic
codegen-units = 1   # Compile crates one after another so the compiler can optimize better
lto = true          # Enables link to optimizations
opt-level = "s"     # Optimize for binary size
strip = true        # Remove debug symbols
